# Prompter

./: .gitignore  DISTRIBUTION.md  PLAN.md  PROJECT_MAP.md  README.md  RESEARCH_PAPER.md  ROADMAP.md  WHAT_WE_BUILT.md  antigravity_all_docs.md  antigravity_doc1_nlp_engine.md  antigravity_doc2_moat_features.md  antigravity_doc3_deep_intent.md  calc_keys.js  index.html  keys_obf.txt  loader.html  nishant_shekhawats_resume.docx  package-lock.json  package.json  pill.html  playwright.config.ts  preview_frames.cjs  record_video.cjs  record_video.js  storyboard.html  test_keys.js  video_animation.html  vite.config.ts
landing/: index.html  package-lock.json  package.json
landing/public/: _headers
landing/src/: App.css  App.tsx  index.css
mobile/: .gitignore
mobile/snaptext-android/: settings.gradle.kts
mobile/snaptext-android/app/: build.gradle.kts  proguard-rules.pro
mobile/snaptext-android/app/src/main/: AndroidManifest.xml
mobile/snaptext-android/app/src/main/java/com/snaptext/keyboard/: SnapTextApp.kt  SnapTextIME.kt
mobile/snaptext-android/app/src/main/res/drawable/: bg_insert_button.xml  bg_key.xml  bg_key_special.xml  bg_mode_chip.xml  bg_mode_chip_active.xml  bg_space_bar.xml
mobile/snaptext-android/app/src/main/res/layout/: ai_bar.xml  ai_result_panel.xml  clipboard_panel.xml  keyboard_view.xml  template_panel.xml
mobile/snaptext-android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
mobile/snaptext-android/app/src/main/res/xml/: method.xml
mobile/snaptext-android/gradle/: libs.versions.toml
src/: App.css  App.tsx  App1.css  App1.tsx  index.css  index1.css  loader.ts  pill.ts
src-tauri/: .gitignore  Cargo.toml  build_err.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  capture.rs  db.rs  embedding.rs  inject.rs  keychain.rs  lib.rs  ollama.rs
src-tauri/src/nlp/: features.rs  intent.rs  language.rs  local_engine.rs  mod.rs  mod_types.rs  normalize.rs  prompt.rs  thread.rs
src-tauri/src/nlp/data/: stopwords.rs
src/front/: App.tsx  index.css
tests/helpers/: sample-texts.ts  tauri-mock.ts  worker-client.ts
tests/quality/: reply-quality.spec.ts
tests/ui/: edge-cases.spec.ts  error-states.spec.ts  history.spec.ts  keyboard.spec.ts  modes.spec.ts  settings.spec.ts  startup.spec.ts  transform-flow.spec.ts
worker/: schema.sql  worker.js  wrangler.toml
(+11 files in other folders)
