[package]
name = "prompter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
enigo = "0.2.0"
arboard = "3.6.1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
futures-util = "0.3"

# NOTE: removed the duplicate [target.'cfg(...)'.dependencies] block for
# tauri-plugin-global-shortcut — it was already listed above and the
# duplicate caused ambiguous feature resolution on some platforms.